php-src/ext/spl/tests/bug73423.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Class 'NotExists' not found in /root/php-src/ext/spl/tests/bug73423.php(48) : eval()'d code on line 1